Fix padding on mobile (cover)

--- a/src/css/imports/_cover.css
+++ b/src/css/imports/_cover.css
@@ -51,10 +51,14 @@
     text-shadow: 0 1px 3px rgba(0,0,0,.3);
     padding: 0 var(--global-padding);
     margin: 0;
-    
+
     @media screen and (--hd) {
         font-size: 2em;
         padding: 0 var(--padding-hd);
+    }
+
+    @media screen and (--tablet) {
+        padding: 0;
     }
 }
 
@@ -71,6 +75,10 @@
     @media screen and (--hd) {
         font-size: 1.2em;
         padding: 0 var(--padding-hd);
+    }
+
+    @media screen and (--tablet) {
+        padding: 0;
     }
 
     & > p {
